feat: first commit

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-spring/parallax": "^10.0.3",
+    "@react-spring/web": "^10.0.3",
+    "babel-plugin-react-compiler": "^1.0.0",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
